[package]
name = "snapback"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.57", features = ["derive"] }
glob = "0.3.3"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
image = { version = "0.24", features = ["webp"] }
